Now the sphere is visible was a z-index issue

--- a/examples/css/nft-style.css
+++ b/examples/css/nft-style.css
@@ -94,7 +94,7 @@ html {
   object-fit: cover;
 }
 
-#canvas {
+#canvas, #targetcanvas{
   position: absolute;
   left: 0;
   top: 0;
